--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,10 +3,10 @@
 // -----------------------------------------------------------------------------
 
 //Основные цвета
-$mainPageColor1:#f54732;
-$mainPageColor2:#142558;
-$mainPageColor3:#a1a8bd;
-$mainPageColor4:#e3e8f0;
+$mainPageColorRed:#f54732;
+$mainPageColorBlue:#142558;
+$mainPageColorGray:#a1a8bd;
+$mainPageColorLightGray:#e3e8f0;
 
 //Переменные, отвечающие за цвет шрифта и ссылок
 $mainFontColor: #142558;
