--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -3,7 +3,7 @@
     justify-content: space-around;
     align-items: center;
     height: 56px;
-    width: 1400px;
+    max-width: 1400px;
     background-color: #ffffff;
     border: 1px solid #f0f2f7;
    // background-color: #f0f2f7;
