--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,121 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
+.footer{
+    width: 100%;
+    height: 200px;
+    background-color: #222328;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    &__wrap-nav-and-logo{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 1170px;
+        height: 96px;
+        border-bottom: 1px solid #38393e;    
+    }
+
+    &__nav-bar{
+        width: 970px;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    &__nav-list{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 770px;
+    }
+
+    &__nav-link{
+        color: #ffffff;
+        @include bold;
+        font-size: 12px;
+        text-transform: uppercase;
+        &:hover{
+            color: $mainPageColorRed;
+            transition: 0.3s;
+        }
+    }
+
+    &__wrap-copyright{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 26px;
+        width: 1170px;
+        height: 100px;
+    }
+
+
+}
+
+.copyright{
+    &__text{
+        color: $mainPageColorGray;
+        font-size: 14px;
+    }
+}
+
+.support{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 40px;
+    &__wrap{
+        margin-bottom: 6px;
+    }
+    &__text{
+        margin-left: 9px;
+        color: $mainPageColorGray;
+        font-size: 14px;
+    }
+    &__tel{
+        @include bold;
+        color: $mainPageColorGray;
+        text-align: center;
+        font-size: 16px;
+        text-transform: uppercase;
+        margin-left: 20px;
+    }
+}
+
+.login{
+    margin-right: 160px;
+    &__button-text{
+        color: $mainPageColorGray;
+        font-size: 14px;
+        margin-left: 12px;
+        &:hover{
+            color: $mainPageColorRed;
+            transition: 0.3s;
+        }
+    }
+}
+
+.order-status{
+    position: relative;
+    &__link{
+        color: #a1a8bd;
+        font-size: 14px;
+        &::before{
+            content: "";
+            position: absolute;
+            height: 16px;
+            width: 16px;
+            right: -7px;    
+            border: 2px solid #dadee2;
+            border-radius: 50%;
+        }
+        &:hover{
+            color: $mainPageColorRed;
+            transition: 0.3s;
+        }
+    }
+    &__icon{
+        margin-left: 16px;
+    }
+}
