--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,17 +8,14 @@ a {
       @include light;
       background-color: #f5f8fa;
       display: flex;
+      min-height: 100vh;
       flex-direction: column;
-      height: 100%;
       margin: 0;
       padding: 0;
   }
+  
   main{
-    flex:1 0 auto;
-  }
-
-  footer{  
-      flex: 0 0 auto;    
+    flex: 1;
   }
 
   header {
