сверстаны карточки товаров, а также баннер со скидкой, пока без адаптива

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -521,6 +522,19 @@ nav {
           justify-content: space-between;
 }
 
+.main-content__goods {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 26px 0 76px 0;
+}
+
+.main-content__next-pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .logo-page {
   width: 100%;
   height: 236px;
@@ -768,5 +782,148 @@ nav {
   top: 5px;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
+}
+
+.goods {
+  width: 1200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.goods__card {
+  width: 270px;
+  height: 384px;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+.goods__card:hover {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-shadow: 0 9px 21px rgba(168, 172, 185, 0.44);
+          box-shadow: 0 9px 21px rgba(168, 172, 185, 0.44);
+}
+
+.goods__link {
+  height: 240px;
+}
+
+.goods__discount-wrap {
+  margin-left: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 15px 32px 15px;
+}
+
+.card__name {
+  color: #142558;
+  font-size: 16px;
+  font-family: 'PTRootUIWebBold', sans-serif;
+}
+
+.card__price {
+  font-family: 'PTRootUIWebBold', sans-serif;
+  color: #143458;
+  font-size: 24px;
+  margin-top: 13px;
+}
+
+.card__in-cart {
+  width: 99px;
+  height: 36px;
+  border-radius: 3px;
+  border: 2px solid #e3e8f0;
+  background-color: #fff;
+  margin-top: 24px;
+  color: #343e5c;
+  font-family: 'PTRootUIWebBold', sans-serif;
+  font-size: 14px;
+}
+
+.card__in-cart:hover {
+  border-color: #f24841;
+  color: #f24841;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.card__in-cart:active {
+  border-color: #db2d25;
+  color: #db2d25;
+}
+
+.card__in-cart:focus {
+  outline: none;
+}
+
+.discount {
+  width: 571px;
+  height: 383px;
+  background-image: url(../../img/chairСatalog/discount.png);
+  background-repeat: no-repeat;
+  -webkit-box-shadow: inset 125px -2px 300px 86px #c9d6e0;
+  box-shadow: inset 125px -2px 300px 86px #c9d6e0;
+}
+
+.discount__text {
+  font-family: 'PTRootUIWebBold', sans-serif;
+  color: #142558;
+  font-size: 36px;
+  margin-bottom: 31px;
+  margin-left: 40px;
+}
+
+.discount__see-all {
+  width: 121px;
+  height: 36px;
+  border-radius: 5px;
+  border: 2px solid rgba(20, 52, 88, 0.16);
+  background-color: rgba(255, 255, 255, 0.16);
+  margin-left: 40px;
+  font-family: 'PTRootUIWebBold', sans-serif;
+  color: #143458;
+  font-size: 14px;
+}
+
+.discount__see-all:hover {
+  border-color: #f2474170;
+  color: #f24741d7;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.discount__see-all:active {
+  border-color: #db2d2570;
+  color: #db2e25d7;
+}
+
+.discount__see-all:focus {
+  outline: none;
 }
 /*# sourceMappingURL=main.css.map */
