--- a/sass/pages/_chairСatalog.scss
+++ b/sass/pages/_chairСatalog.scss
@@ -12,10 +12,13 @@
     }
     &__goods{
         display: flex;
-        margin: 26px 0 76px 0;
+        margin: 26px 0 73px 0;
     }
     &__next-pages{
         display: flex;
+        margin: 0 0 100px 0;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -306,8 +309,6 @@
     height: 383px;
     background-image: url(../../img/chairСatalog/discount.png);
     background-repeat: no-repeat;
-    -webkit-box-shadow: inset 125px -2px 300px 86px rgba(201,214,224,1);
-    -moz-box-shadow: inset 125px -2px 300px 86px rgba(201,214,224,1);
     box-shadow: inset 125px -2px 300px 86px rgba(201,214,224,1);
     
     &__text{
@@ -342,5 +343,64 @@
         &:focus{
             outline:none;
         }
+    }
+}
+.next-pages{
+    width: 1170px;
+    height: 90px;
+    background-color: #ffffff;
+    &__page-number{
+        width: 48px;
+        height: 48px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+       
+        &:hover{
+            color: #f24741;
+            transition: 0.3s;
+            cursor: pointer;
+        }
+    }
+    &__page-number{
+        @include bold;
+        color: #3a405b;
+        font-size: 14px;
+    }
+    &--active{
+        color: #f54732;
+        border-radius: 50%;
+        box-shadow: 0 9px 18px rgba(168, 172, 185, 0.53);
+        background-color: #ffffff;
+    }
+    &__back{
+        margin-left: 15px;
+        margin-right: 20px;
+    }
+    &__forward{
+        margin-left: 20px;
+        margin-right: 15px;
+    }
+
+}
+.arrow{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 48px;
+    border-radius: 50%;
+    height: 48px;
+    border: 2px solid #e3e8f0;
+    &:hover{
+        cursor: pointer;
+        &>svg{
+            &>use{
+               fill: #f24741;
+               transition: 0.3s;  
+            }    
+        } 
+    }
+    &__modif{
+        transform: rotate(180deg);
     }
 }
